# lunascope

./: .gitignore  CHANGELOG.json  CONTRIBUTING.md  LICENSE  README.md  launch.py  pyproject.toml  pysidedeploy.spec
.github/workflows/: build-and-publish-wheels.yml  build-macos-app.yml  build-macos-intel-app.yml  build-pyinstaller-desktop-diagnostic.yml  build-pyinstaller.yml  build-windows-app.yml  draft-pdf.yml  smoke-test-pyinstaller-desktop-diagnostic.yml  test.yml
paper/: paper.bib  paper.md
scripts/: patch_nuitka_package_config.py
src/lunascope/: __init__.py  app.py  controller.py  file_dialogs.py  gui_help.py  helpers.py  lwf.py  runtime_paths.py  session_state.py  tls.py  updater.py
src/lunascope/components/: actigraphy.py  anal.py  annot_explorer.py  annot_explorer_funcs.py  annotator.py  cmaps.py  ctree.py  drop_signals.py  explorer_annot.py  explorer_base.py  explorer_dock.py  explorer_event_decomp.py  explorer_filter_design.py  explorer_gpa.py  explorer_harmonizer.py  explorer_hypnoscope.py  explorer_plotter.py  explorer_tables.py  explorer_topo.py  explorer_two_channel_dynamics.py  explorer_waveform.py  harmonizer_funcs.py  hypno.py  masks.py  metrics.py  moonbeam_dock.py  mplcanvas.py  new_edf.py  plts.py  predict_dock.py  psd_overlay.py  results_io.py  save_edf.py  settings.py  signals.py  slist.py  soappops.py  spectrogram.py  tbl_funcs.py  topo_clocs.py  (+2 more)
src/lunascope/ui/: main.ui
tests/: README.md  conftest.py  test_annotation_explorer_compile.py  test_explorer_tables.py  test_filter_design_tab.py  test_gpa_assoc_helpers.py  test_gpa_joint_model.py  test_harmonizer_funcs.py  test_helpers_logic.py  test_helpers_qt.py  test_lwf.py  test_metrics_filters.py  test_metrics_instances.py  test_package.py  test_pp_display_logic.py  test_project_eval_parallel.py  test_rendered_membership_colors.py  test_results_io.py  test_runtime_paths.py  test_save_edf.py  test_session_state.py  test_spectrogram_plots.py  test_tls.py  test_topo_clocs.py  test_topo_core.py  test_updater.py  test_utf8_text_io.py
